Fixes layout issues caused by hardcoded 9999px width.

--- a/styles/screen.css
+++ b/styles/screen.css
@@ -52,7 +52,8 @@ p{margin:0; padding:0; color:#fff}
 .category-container {
     overflow: hidden;
     position: relative;
-    float: left;
+    white-space: nowrap;
+    font-size: 0;
 }
 
 .h-spacer {
@@ -65,7 +66,7 @@ p{margin:0; padding:0; color:#fff}
 }
 
 .h-list-category {
-    float: left;
+    display: inline-block;
 }
 
 .h-list > li {
